styling on mobile fix

--- a/css/resume.css
+++ b/css/resume.css
@@ -341,13 +341,9 @@ section h3{
     }
     .section1 h1{
         text-align: center;
-        font-weight: 700;
-        font-size: 50px;
-        color: #FFFFFF;
     }
     .section1 p{
         text-align: center;
-        color: #FFFFFF;
         margin-bottom: 25%;
     }
 }
